# FINken-EYE

jevois/: setup.sh
jevois/devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
jevois/devel/include/svo_msgs/: DenseInput.h  Feature.h  Info.h  NbvTrajectory.h
jevois/devel/lib/pkgconfig/: rqt_svo.pc  svo.pc  svo_msgs.pc  svo_ros.pc  vikit_common.pc  vikit_py.pc  vikit_ros.pc
jevois/devel/lib/python2.7/dist-packages/rqt_svo/: __init__.py
jevois/devel/lib/python2.7/dist-packages/svo_analysis/: __init__.py
jevois/devel/lib/python2.7/dist-packages/vikit_py/: __init__.py
jevois/devel/lib/svo/: test_depth_filter  test_feature_align  test_feature_detection  test_matcher  test_pipeline  test_pose_optimizer  test_sparse_img_align
jevois/devel/lib/svo_ros/: benchmark  vo
jevois/devel/lib/vikit_common/: test_vk_common_camera  test_vk_common_patch_score  test_vk_common_triangulation
jevois/devel/share/gennodejs/ros/svo_msgs/msg/: _index.js
jevois/devel/share/roseus/ros/svo_msgs/: manifest.l
jevois/devel/share/rqt_svo/cmake/: rqt_svoConfig.cmake
jevois/devel/share/svo/cmake/: svoConfig.cmake
jevois/devel/share/svo_msgs/cmake/: svo_msgs-msg-paths.cmake  svo_msgsConfig.cmake
jevois/devel/share/svo_ros/cmake/: svo_rosConfig.cmake
jevois/devel/share/vikit_common/cmake/: vikit_commonConfig.cmake
jevois/devel/share/vikit_py/cmake/: vikit_pyConfig.cmake
jevois/devel/share/vikit_ros/cmake/: vikit_rosConfig.cmake
jevois/src/: CMakeLists.txt
jevois/svo_no_ros/: CMakeLists.txt  rebuild-platform.sh
jevois/svo_no_ros/Sophus/: CMakeLists.txt
jevois/svo_no_ros/Sophus/sophus/: so2.cpp
jevois/svo_no_ros/fast/: CMakeLists.txt
jevois/svo_no_ros/src/Modules/svo_no_ros/: postinstall  svo_no_ros.C
jevois/svo_no_ros/svo/: CMakeLists.txt
jevois/svo_no_ros/svo/src/: sparse_img_align.cpp
jevois/svo_no_ros/svo/test/: test_feature_detection.cpp  test_pipeline.cpp
jevois/svo_no_ros/vikit_common/: CMakeLists.txt
jevois/svo_no_ros/vikit_common/include/vikit/: nlls_solver.h
jevois/svo_no_ros/vikit_common/src/: atan_camera.cpp  homography.cpp  img_align.cpp  pinhole_camera.cpp
jevois/vikit_common/: vikit_make_output
